[add] catppuccin colorscheme
to tmux
to nvim

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,12 +21,42 @@ bind r source-file ~/.tmux.conf
 # set to vi mode
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'C-v' send -X rectangle-toggle
 bind -T copy-mode-vi 'y' send -X copy-selection
 # unbind -T copy-mode-vi MouseDragEnd1Pane # prevent exiting copy mode after dragging mouse
 
 # List of plugins
 ## tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
+
+## tmux theme
+##############
+# catppuccin #
+##############
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha' # 'latte', frappe, macchiato, mocha
+
+#############
+# themepack #
+#############
+# set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
+# set -g @themepack 'powerline/default/cyan' # use this theme for tmux
+
+#############
+# nordtheme #
+#############
+# set -g @plugin "nordtheme/tmux"
+
+###########
+# dracula #
+###########
+# set -g @plugin 'dracula/tmux'
+# set -g @dracula-show-powerline true
+# set -g @dracula-fixed-location "Toronto"
+# set -g @dracula-plugins "weather"
+# set -g @dracula-show-flags true
+# set -g @dracula-show-left-icon session
+# set -g status-position bottom
 
 ## navigator
 set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/nvim with Ctrl-hjkl
@@ -36,11 +66,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # session save/restore
 # set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 # set -g @continuum-restore 'on' # enable tmux-continuum functionality
-
-## tmux theme
-# set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
-# set -g @themepack 'powerline/default/cyan' # use this theme for tmux
-set -g @plugin "nordtheme/tmux"
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
