[chn] change tmux status line to display window name

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,27 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha' # 'latte', frappe, macchiato, mocha
 
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator "  █"
+
+# set -g @catppuccin_window_default_text "#{b:pane_current_path}" # use "#W" for application instead of directory
+set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_current_fill "number"
+
+set -g @catppuccin_status_modules_left"session"
+set -g @catppuccin_status_modules_right "directory session host date_time"
+set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "yes"
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
 #############
 # themepack #
 #############
