--- a/tmux.conf
+++ b/tmux.conf
@@ -47,6 +47,9 @@ set -g @catppuccin_window_current_text "#W"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_current_fill "number"
 
+set -g @catppuccin_window_status_enable "yes"
+set -g @catppuccin_window_status_icon_enable "yes"
+
 set -g @catppuccin_status_modules_left ""
 set -g @catppuccin_status_modules_right "session host date_time"
 set -g @catppuccin_status_left_separator  ""
